' java -jar ~/git/lbd/plantuml.jar class_access_link.puml

@startuml

Cpu0FrameLowering <-- Cpu0Subtarget : FrameLowering
Cpu0FrameLowering --> Cpu0Subtarget : STI

Cpu0InstrInfo <-- Cpu0Subtarget : InstrInfo
Cpu0InstrInfo --> Cpu0Subtarget : Subtarget

Cpu0InstrInfo <|.. Cpu0SEInstrInfo

class Cpu0SEInstrInfo

class Cpu0FrameLowering

Cpu0Subtarget --> Cpu0TargetMachine : TM
Cpu0Subtarget <-- Cpu0TargetMachine : Subtarget
Cpu0Subtarget <-- Cpu0TargetMachine : DeafaultSubtarget

class Cpu0TargetMachine

class Cpu0Subtarget {
  const Cpu0TargetMachine &TM
  getSelectionDAGInfo()
  getDataLayout()
  getinstrInfo()
  getRegisterInfo()
  getFrameLowering()
  getTargetLowering()
}

Cpu0Subtarget <-- Cpu0RegisterInfo : Subtarget

class Cpu0RegisterInfo

Cpu0TargetObjectFile <-- TargetLowering
TargetLowering <|.. Cpu0TargetLowering

Cpu0Subtarget *--> Cpu0TargetLowering : TLinfo
Cpu0Subtarget <-- Cpu0TargetLowering : Subtarget

class Cpu0TargetObjectFile
class TargetLowering 
class Cpu0TargetLowering
@enduml
